--- a/network/tidb-native-cred-bruteforce.yaml
+++ b/network/tidb-native-cred-bruteforce.yaml
@@ -4,8 +4,8 @@ info:
   name: TiDB DB with enabled native password
   author: lu4nx
   severity: info
-  tags: network,tidb,bruteforce,database
   description: TiDB is fully compatible with the MySQL 5.7 protocol and the common features and syntax of MySQL 5.7. TiDB instance with enabled native password support prone vulnerable for password brute-force attack.
+  tags: network,tidb,bruteforce,db
 
 network:
   - host:
@@ -17,3 +17,4 @@ network:
         words:
           - "mysql_native_password"
           - "TiDB"
+        condition: and
