--- a/exposed-panels/ibm-security-access-manager.yaml
+++ b/exposed-panels/ibm-security-access-manager.yaml
@@ -12,18 +12,17 @@ requests:
     path:
       - "{{BaseURL}}"
 
-    matchers-condition: and
+    matchers-condition: or
     matchers:
-      - type: status
-        status:
-          - 200
       - type: word
         words:
           - "<title>IBM Security Access Manager"
           - "<h2>IBM Security"
           - "<em>Access Manager"
+        part: body
         condition: and
+
       - type: word
         part: header
         words:
-          - "text/html"
+          - "IBM Security Access Manager for Web"
