--- a/.github/workflows/templates-stats.yml
+++ b/.github/workflows/templates-stats.yml
@@ -11,21 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     if: github.repository == 'projectdiscovery/nuclei-templates' && github.ref == 'refs/heads/master'
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@master
-        with:
-          fetch-depth: 0
-
-      - name: Setup golang
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.14
+      - uses: actions/checkout@master
+      - uses: actions/setup-go@v2
+        with: 
+          go-version: 1.17
 
       - name: Installing Template Stats
-        env:
-          GO111MODULE: on
         run: |
-          go get -v github.com/projectdiscovery/templates-stats@main
+          go install github.com/projectdiscovery/templates-stats@main
         shell: bash
 
       - name: Markdown Stats
