--- a/.github/workflows/template-validate.yml
+++ b/.github/workflows/template-validate.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           GO111MODULE: on
         run: |
-          go install github.com/projectdiscovery/nuclei/v2/cmd/nuclei@dev
+          go install github.com/projectdiscovery/nuclei/v2/cmd/nuclei@master
         shell: bash
 
       - name: Template Validation
