pre-commit-config update

--- a/.github/workflows/template-validate.yml
+++ b/.github/workflows/template-validate.yml
@@ -28,6 +28,6 @@ jobs:
 
       - name: Template Validation
         run: |
-          nuclei -validate -t . -exclude .pre-commit-config.yaml
-          nuclei -validate -w ./workflows -exclude .pre-commit-config.yaml
+          nuclei -validate -t .
+          nuclei -validate -w ./workflows
         shell: bash
