--- a/technologies/carestream-vue-detect.yaml
+++ b/technologies/carestream-vue-detect.yaml
@@ -1,27 +1,30 @@
 id: carestream-vue-detect
 
 info:
-  name: CARESTREAM Vue Motion Detector 
+  name: CARESTREAM Vue Motion Detector
   author: philippedelteil
   severity: info
   description: This template will detect a running CARESTREAM Vue Motion instance
   references: https://www.carestream.com/en/us/-/media/publicsite/resources/radiography-and-health-it/product-brochures/ris-pacs/pdfs/brochure-vue-motion-201601.pdf
+  tags: tech,myvuehelp
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/portal/images/MyVue/MyVueHelp.png"
       - "{{BaseURL}}/portal/favicon.ico"
+      - "{{BaseURL}}/portal/images/MyVue/MyVueHelp.png"
+
     redirects: true
     stop-at-first-match: true
     max-redirects: 2
+    matchers-condition: or
     matchers:
       - type: dsl
-        name: "MyVueHelp"
+        name: "myvuehelp"
         dsl:
-          - "status_code==200 && (\"84054196570ecd7526894ccb6e7c5c6e\" == md5(body))"
+          - 'status_code==200 && ("84054196570ecd7526894ccb6e7c5c6e" == md5(body))'
 
       - type: dsl
-        name: "favicon"
+        name: "myvuehelp-favicon"
         dsl:
-          - "status_code==200 && (\"1c4b2c10acccc48852d12eddadaf7944\" == md5(body))"
+          - 'status_code==200 && (1c4b2c10acccc48852d12eddadaf7944" == md5(body))'
