--- a/technologies/carestream-vue-detect.yaml
+++ b/technologies/carestream-vue-detect.yaml
@@ -22,9 +22,9 @@ requests:
       - type: dsl
         name: "myvuehelp"
         dsl:
-          - 'status_code==200 && ("84054196570ecd7526894ccb6e7c5c6e" == md5(body))'
+          - "status_code==200 && (\"84054196570ecd7526894ccb6e7c5c6e\" == md5(body))"
 
       - type: dsl
         name: "myvuehelp-favicon"
         dsl:
-          - 'status_code==200 && (1c4b2c10acccc48852d12eddadaf7944" == md5(body))'
+          - "status_code==200 && (\"1c4b2c10acccc48852d12eddadaf7944\" == md5(body))"
