--- a/vulnerabilities/oscommerce/oscommerce-rce.yaml
+++ b/vulnerabilities/oscommerce/oscommerce-rce.yaml
@@ -3,7 +3,7 @@ id: oscommerce-rce
 info:
   author: Suman_Kar
   name: osCommerce 2.3.4.1 - Remote Code Execution
-  description: Exploiting the install.php finish process by injecting php payload into the db_database parameter & read the system command output from configure.php
+  description: A vulnerability in osCommerce's install.php allows remote unauthenticated attackers to injecting PHP code into the db_database parameter, and subsequently use the configure.php page to to read the command's executed output
   reference: https://www.exploit-db.com/exploits/50128
   severity: high
   tags: rce,oscommerce
