--- a/exposed-panels/oracle-business-control.yaml
+++ b/exposed-panels/oracle-business-control.yaml
@@ -4,9 +4,8 @@ info:
   name: Oracle Commerce Business Control Center
   author: dhiyaneshDk
   severity: info
+  reference: https://www.shodan.io/search?query=http.title%3A%22Oracle+Commerce%22
   tags: oracle,login
-  reference:
-    - https://www.shodan.io/search?query=http.title%3A%22Oracle+Commerce%22
 
 requests:
   - method: GET
