--- a/exposed-panels/oracle-integrated-manager.yaml
+++ b/exposed-panels/oracle-integrated-manager.yaml
@@ -5,8 +5,7 @@ info:
   author: dhiyaneshDk
   severity: info
   tags: oracle,login
-  reference:
-    - https://www.shodan.io/search?query=http.title%3A%22Oracle%28R%29+Integrated+Lights+Out+Manager%22&page=2
+  reference: https://www.shodan.io/search?query=http.title%3A%22Oracle%28R%29+Integrated+Lights+Out+Manager%22&page=2
 
 requests:
   - method: GET
