--- a/exposed-panels/oracle-integrated-manager.yaml
+++ b/exposed-panels/oracle-integrated-manager.yaml
@@ -4,7 +4,7 @@ info:
   name: Oracle(R) Integrated Lights Out Manager
   author: dhiyaneshDk
   severity: info
-  tags: oracle,login
+  tags: oracle,login,panel
   reference: https://www.shodan.io/search?query=http.title%3A%22Oracle%28R%29+Integrated+Lights+Out+Manager%22&page=2
 
 requests:
