--- a/exposed-panels/oracle-business-control.yaml
+++ b/exposed-panels/oracle-business-control.yaml
@@ -5,7 +5,7 @@ info:
   author: dhiyaneshDk
   severity: info
   reference: https://www.shodan.io/search?query=http.title%3A%22Oracle+Commerce%22
-  tags: oracle,login
+  tags: oracle,login,panel
 
 requests:
   - method: GET
