--- a/exposed-panels/oracle-integrated-manager.yaml
+++ b/exposed-panels/oracle-integrated-manager.yaml
@@ -17,6 +17,7 @@ requests:
       - type: word
         words:
           - '<title>Oracle(R) Integrated Lights Out Manager - Login</title>'
+        part: body
 
       - type: status
         status:
