--- a/exposed-panels/symantec/symantec-ewep-login.yaml
+++ b/exposed-panels/symantec/symantec-ewep-login.yaml
@@ -1,7 +1,7 @@
-id: symantec-ewep-detect
+id: symantec-ewep-login
 
 info:
-  name: Symantec Encryption Web Email Protection Detect
+  name: Symantec Encryption Web Email Protection
   author: johnk3r
   severity: info
   tags: panel,symantec,login
