--- a/exposed-panels/symantec/symantec-ewep-login.yaml
+++ b/exposed-panels/symantec/symantec-ewep-login.yaml
@@ -4,6 +4,7 @@ info:
   name: Symantec Encryption Web Email Protection
   author: johnk3r
   severity: info
+  reference: https://www.shodan.io/search?query=http.title%3A%22Symantec+Encryption+Server%3A+Web+Email+Protection+-+Login%22
   tags: panel,symantec,login
 
 requests:
