--- a/takeovers/pagewiz-takeover.yaml
+++ b/takeovers/pagewiz-takeover.yaml
@@ -16,4 +16,6 @@ requests:
         words:
           - '404 - Page Not Found'
           - 'Start Your New Landing Page Now!'
+          - 'pagewiz'
         condition: and
+        
