--- a/vulnerabilities/other/bullwark-momentum-lfi.yaml
+++ b/vulnerabilities/other/bullwark-momentum-lfi.yaml
@@ -29,6 +29,6 @@ requests:
         status:
           - 200
 
-      - type: word
-        words:
-          - "root:"
+      - type: regex
+        regex:
+          - "root:.*:0:0"
