--- a/exposed-panels/totemomail-detect.yaml
+++ b/exposed-panels/totemomail-detect.yaml
@@ -4,6 +4,7 @@ info:
   name: Detect totemomail - Secure email communication
   author: johnk3r
   severity: info
+  tags: totemomail,panel
 
 requests:
   - method: GET
@@ -14,8 +15,9 @@ requests:
     matchers:
       - type: word
         words:
-          - "totemomail"
+          - "<title>WebMail login: totemomail® WebMail</title>"
         part: body
+
       - type: status
         status:
           - 200
