--- a/default-logins/weblogic/weblogic-weak-login.yaml
+++ b/default-logins/weblogic/weblogic-weak-login.yaml
@@ -1,7 +1,7 @@
-id: weblogic-default-login
+id: weblogic-weak-login
 
 info:
-  name: WebLogic default login
+  name: WebLogic weak login
   author: pdteam
   severity: high
   tags: default-login,weblogic
