--- a/exposed-panels/ibm/ibm-security-access-manager.yaml
+++ b/exposed-panels/ibm/ibm-security-access-manager.yaml
@@ -24,3 +24,10 @@ requests:
         words:
           - "IBM Security Access Manager for Web"
         part: header
+
+      - type: word
+        words:
+          - "/mga/sps/authsvc/policy/forgot_username"
+          - "/mga/sps/authsvc/policy/forgot_password"
+        part: body
+        condition: and
