--- a/dns/elasticbeantalk-takeover-detection.yaml
+++ b/dns/elasticbeantalk-takeover-detection.yaml
@@ -4,11 +4,11 @@ info:
   name: Elastic BeanTalk takeover detection
   author: philippedelteil
   severity: high
-  tags: dns,takeover
   reference:
     - https://github.com/EdOverflow/can-i-take-over-xyz/issues/147
     - https://twitter.com/payloadartist/status/1362035009863880711
     - https://www.youtube.com/watch?v=srKIqhj_ki8
+  tags: dns,takeover,aws
 
 dns:
   - name: "{{FQDN}}"
