--- a/takeovers/pagewiz-takeover.yaml
+++ b/takeovers/pagewiz-takeover.yaml
@@ -4,6 +4,7 @@ info:
   name: Pagewiz subdomain takeover
   author: brabbit10
   severity: high
+  reference: https://www.pagewiz.com/
   tags: takeover
 
 requests:
