--- a/misconfiguration/glowroot-anonymous-access.yaml
+++ b/misconfiguration/glowroot-anonymous-access.yaml
@@ -1,23 +1,32 @@
 id: glowroot-anonymous-access
+
 info:
   name: Glowroot Anonymous User
   author: pussycat0x
   severity: high
   description: Anonymous user access allows to understand the host internals
   reference: https://www.shodan.io/search?query=http.title%3A%22Glowroot%22
-  tags: misconfig, unauth
+  tags: misconfig,unauth,glowroot
+
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/error/messages?transaction-type=Web'
+      - '{{BaseURL}}/backend/admin/users?username=anonymous'
+
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "defaultTransactionType"
-          - "slowThresholdMillis"
-          - "60000"
-          - "Transactions"
+          - '"username":"anonymous"'
+          - '"Administrator"'
+          - '"newPassword":""'
+        condition: and
+
+      - type: word
+        words:
+          - "application/json"
+        part: header
+
       - type: status
         status:
           - 200
