--- a/takeovers/pagewiz-takeover.yaml
+++ b/takeovers/pagewiz-takeover.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "{{BaseURL}}"
 
+    matchers-condition: and
     matchers:
       - type: word
         words:
@@ -19,3 +20,7 @@ requests:
           - 'Start Your New Landing Page Now!'
           - 'pagewiz'
         condition: and
+
+      - type: status
+        status:
+          - 200
