--- a/dns/elasticbeantalk-takeover.yaml
+++ b/dns/elasticbeantalk-takeover.yaml
@@ -1,23 +1,24 @@
-id: elasticbeantalk-takeover-detection
+id: elasticbeantalk-takeover
 
 info:
-  name: Elastic BeanTalk takeover detection
-  author: philippedelteil
+  name: ElasticBeanTalk takeover detection
+  author: philippedelteil,rotemreiss
   severity: high
   reference:
     - https://github.com/EdOverflow/can-i-take-over-xyz/issues/147 # kudos to @m7mdharoun for sharing process details.
     - https://twitter.com/payloadartist/status/1362035009863880711
     - https://www.youtube.com/watch?v=srKIqhj_ki8
   tags: dns,takeover,aws
-
-# You need to claim the CNAME in AWS portal (https://aws.amazon.com/) or via AWS CLI to confirm the takeover.
-# Do not report this without claiming the CNAME.
-#
-# CLI command to verify the availability of the environment:
-# aws elasticbeanstalk check-dns-availability --region {AWS_REGION} --cname-prefix {CNAME_PREFIX}
-# Example:
-# CNAME - 2rs3c.eu-west-1.elasticbeanstalk.com
-# Command - aws elasticbeanstalk check-dns-availability --region eu-west-1 --cname-prefix 2rs3c
+  additional-fields:
+    comments: |
+      Only CNAMEs with region specification are hijackable.
+      You need to claim the CNAME in AWS portal (https://aws.amazon.com/) or via AWS CLI to confirm the takeover.
+      Do not report this without claiming the CNAME.
+      CLI command to verify the availability of the environment:
+      aws elasticbeanstalk check-dns-availability --region {AWS_REGION} --cname-prefix {CNAME_PREFIX}
+      For example:
+      CNAME - 2rs3c.eu-west-1.elasticbeanstalk.com
+      Command - aws elasticbeanstalk check-dns-availability --region eu-west-1 --cname-prefix 2rs3c
 
 dns:
   - name: "{{FQDN}}"
@@ -30,11 +31,8 @@ dns:
     matchers:
 
       - type: regex
-        name: elasticbeanstalk
         regex:
-          # Only CNAMEs with region specification are hijackable.
           - \.(us|af|ap|ca|eu|me|sa)\-(east|west|south|northeast|southeast|central)\-[1-9]+\.elasticbeanstalk\.com
-        condition: or
 
       - type: word
         words:
