--- a/technologies/shopizer-detect.yaml
+++ b/technologies/shopizer-detect.yaml
@@ -9,8 +9,8 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/shop/"
       - "{{BaseURL}}"
+      - "{{BaseURL}}/shop/"
 
     matchers-condition: and
     matchers:
@@ -21,3 +21,4 @@ requests:
       - type: word
         words:
           - 'Powered by <a href="http://www.shopizer.com"'
+        part: body
