--- a/technologies/getsimple-cms-detect.yaml
+++ b/technologies/getsimple-cms-detect.yaml
@@ -9,7 +9,7 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/admin/index.php"
+      - "{{BaseURL}}"
 
     matchers-condition: and
     matchers:
@@ -19,4 +19,5 @@ requests:
 
       - type: word
         words:
-          - "GetSimple CMS"
+          - "Powered by  GetSimple"
+        part: body
