--- a/technologies/elfinder-detect.yaml
+++ b/technologies/elfinder-detect.yaml
@@ -10,8 +10,9 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}"
-      - "{{BaseURL}}/php/connector.minimal.php"
+      - "{{BaseURL}}/elfinder.html"
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
 
@@ -19,7 +20,6 @@ requests:
         part: body
         words:
           - "<!-- Element where elFinder will be created (REQUIRED) -->"
-          - '{"error":["errUnknownCmd"]}'
 
       - type: status
         status:
