--- a/technologies/gitea-detect.yaml
+++ b/technologies/gitea-detect.yaml
@@ -12,6 +12,7 @@ requests:
       - "{{BaseURL}}"
       - "{{BaseURL}}/user/login"
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
 
@@ -23,3 +24,9 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        regex:
+          - "Powered by Gitea Version: ([0-9.]+)"
