--- a/technologies/php-proxy-detect.yaml
+++ b/technologies/php-proxy-detect.yaml
@@ -23,3 +23,10 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - 'PHP\-Proxy<\/a> ([0-9.]+)<\/div>'
