--- a/technologies/iplanet-web-server.yaml
+++ b/technologies/iplanet-web-server.yaml
@@ -5,7 +5,7 @@ info:
   author: pussycat0x
   severity: info
   tags: tech
-  additional-fields:
+  metadata:
     fofa-dork: 'app="iPlanet-Web-Server,-Enterprise-Edition-4.1"'
 
 requests:
