--- a/default-logins/abb/cs141-default-login.yaml
+++ b/default-logins/abb/cs141-default-login.yaml
@@ -6,7 +6,7 @@ info:
   severity: medium
   reference: https://www.generex.de/media/pages/packages/documents/manuals/f65348d5b6-1628841637/manual_CS141_en.pdf
   tags: hiawatha,iot,default-login
-  additional-fields:
+  metadata:
     shodan-dork: https://www.shodan.io/search?query=html%3A%22CS141%22
 
 requests:
