--- a/technologies/abyss-web-server.yaml
+++ b/technologies/abyss-web-server.yaml
@@ -5,7 +5,7 @@ info:
   author: pussycat0x
   severity: info
   tags: tech
-  additional-fields:
+  metadata:
     fofa-dork: 'app="Abyss-Web-Server"'
 
 requests:
