--- a/technologies/kubernetes/kubernetes-enterprise-manager.yaml
+++ b/technologies/kubernetes/kubernetes-enterprise-manager.yaml
@@ -5,7 +5,7 @@ info:
   author: pussycat0x
   severity: info
   tags: tech,kubernetes
-  additional-fields:
+  metadata:
     fofa-dork: 'app="Kubernetes-Enterprise-Manager"'
 
 requests:
