--- a/technologies/oracle/oracle-iplanet-web-server.yaml
+++ b/technologies/oracle/oracle-iplanet-web-server.yaml
@@ -5,7 +5,7 @@ info:
   author: pussycat0x
   severity: info
   tags: tech,oracle
-  additional-fields:
+  metadata:
     fofa-dork: 'app="Oracle-iPlanet-Web-Server'
 
 requests:
