--- a/technologies/getsimple-cms-detect.yaml
+++ b/technologies/getsimple-cms-detect.yaml
@@ -2,15 +2,18 @@ id: getsimple-cms-detect
 
 info:
   name: GetSimple CMS Detection
-  author: pikpikcu
+  author: pikpikcu,philippedelteil
   severity: info
   tags: tech,getsimple
+  description: Template to detect a running GetSimple CMS instance
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+      - "{{BaseURL}}/readme.txt"
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: status
@@ -20,4 +23,6 @@ requests:
       - type: word
         words:
           - "Powered by  GetSimple"
+          - 'GetSimple CMS is a flatfile CMS'
         part: body
+        condition: or
