--- a/exposed-panels/adobe-component-login.yaml
+++ b/exposed-panels/adobe-component-login.yaml
@@ -1,7 +1,7 @@
 id: adobe-component-login
 
 info:
-  name: Adobe Component Brower Login
+  name: Adobe Component Browser Login
   author: dhiyaneshDK
   severity: info
   reference: https://www.exploit-db.com/ghdb/6846
