--- a/misconfiguration/rack-mini-profiler.yaml
+++ b/misconfiguration/rack-mini-profiler.yaml
@@ -1,7 +1,7 @@
 id: rack-mini-profiler
 
 info:
-  name: rack-mini-profiler environmnet information discloure
+  name: rack-mini-profiler environmnet information disclosure
   author: vzamanillo
   severity: high
   tags: config,debug
