--- a/misconfiguration/springboot/springboot-info.yaml
+++ b/misconfiguration/springboot/springboot-info.yaml
@@ -3,7 +3,7 @@ id: springboot-info
 info:
   name: Detect Springboot Information page
   author: philippedelteil
-  severity: low
+  severity: info
   description: Displays app name and version information among others values
   tags: springboot
 
