--- a/exposures/configs/phpinfo.yaml
+++ b/exposures/configs/phpinfo.yaml
@@ -2,7 +2,7 @@ id: phpinfo-files
 
 info:
   name: phpinfo Disclosure
-  author: pdteam,daffainfo,meme-lord
+  author: pdteam,daffainfo,meme-lord,dhiyaneshDK
   severity: low
   tags: config,exposure
 
@@ -26,6 +26,7 @@ requests:
       - "{{BaseURL}}/infos.php"
       - "{{BaseURL}}/linusadmin-phpinfo.php"
       - "{{BaseURL}}/php-info.php"
+      - "{{BaseURL}}/dashboard/phpinfo.php"
 
     matchers-condition: and
     matchers:
