--- a/misconfiguration/zabbix-error.yaml
+++ b/misconfiguration/zabbix-error.yaml
@@ -3,7 +3,7 @@ id: zabbix-error
 info:
   name: Zabbix Error
   author: dhiyaneshDK
-  severity: low
+  severity: info
   reference: https://www.shodan.io/search?query=http.title%3A%22Warning+%5Brefreshed+every+30+sec.%5D%22
   tags: zabbix,misconfig
 
