--- a/exposures/configs/phpinfo.yaml
+++ b/exposures/configs/phpinfo.yaml
@@ -27,6 +27,7 @@ requests:
       - "{{BaseURL}}/linusadmin-phpinfo.php"
       - "{{BaseURL}}/php-info.php"
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
