Update and rename exposures/logs/database-error.yaml to misconfiguration/database-error.yaml

--- a/misconfiguration/database-error.yaml
+++ b/misconfiguration/database-error.yaml
@@ -5,7 +5,7 @@ info:
   author: dhiyaneshDK
   severity: info
   reference: https://www.shodan.io/search?query=http.title%3A%22Database+Error%22
-  tags: exposure,database,debug
+  tags: misconfig,database
 
 requests:
   - method: GET
