Update and rename weekender-newspaper-wp-theme-open-redirect.yaml to vulnerabilities/wordpress/weekender-newspaper-open-redirect.yaml

--- a/vulnerabilities/wordpress/weekender-newspaper-open-redirect.yaml
+++ b/vulnerabilities/wordpress/weekender-newspaper-open-redirect.yaml
@@ -1,11 +1,11 @@
-id: weekender-newspaper-wp-theme-open-redirect
+id: weekender-newspaper-open-redirect
 
 info:
-  name: WordPress Attitude Themes 1.1.1 Open Redirection
+  name: WordPress Weekender Newspaper Themes 9.0 - Open Redirection
   author: 0x_Akoko
-  reference: https://cxsecurity.com/issue/WLB-2020040103
   severity: low
-  tags: wp,redirect
+  reference: https://cxsecurity.com/issue/WLB-2020040103
+  tags: wordpress,wp-plugin,redirect
 
 requests:
   - method: GET
