--- a/vulnerabilities/wordpress/attitude-theme-open-redirect.yaml
+++ b/vulnerabilities/wordpress/attitude-theme-open-redirect.yaml
@@ -5,7 +5,7 @@ info:
   author: 0x_Akoko
   severity: low
   reference: https://cxsecurity.com/issue/WLB-2020030185
-  tags: wordpress,wp-plugin,redirect
+  tags: wordpress,wp-theme,redirect
 
 requests:
   - method: GET
