Update and rename eatery-restaurant-wp-theme-open-redirect.yaml to vulnerabilities/wordpress/eatery-restaurant-open-redirect.yaml

--- a/vulnerabilities/wordpress/eatery-restaurant-open-redirect.yaml
+++ b/vulnerabilities/wordpress/eatery-restaurant-open-redirect.yaml
@@ -1,11 +1,11 @@
-id: eatery-restaurant-wp-theme-open-redirect
+id: eatery-restaurant-open-redirect
 
 info:
   name: WordPress Attitude Themes 1.1.1 Open Redirection
   author: 0x_Akoko
-  reference: https://cxsecurity.com/issue/WLB-2020030183
   severity: low
-  tags: wp,redirect
+  reference: https://cxsecurity.com/issue/WLB-2020030183
+  tags: wordpress,wp-theme,redirect
 
 requests:
   - method: GET
