--- a/technologies/autobahn-python-detect.yaml
+++ b/technologies/autobahn-python-detect.yaml
@@ -1,19 +1,29 @@
 id: autobahn-python-detect
+
 info:
-  name: Autobahn Python Webserver default page
+  name: Autobahn-Python Webserver Detect
   author: pussycat0x
   severity: info
-  reference: app="AutobahnPython" -fofa query
-  tags: default
+  reference: https://www.shodan.io/search?query=%22AutobahnPython%22
+  tags: tech
+
 requests:
   - method: GET
     path:
       - '{{BaseURL}}'
+
     matchers-condition: and
     matchers:
-      - type: word
-        words:
-          - '<h1>AutobahnPython'
+      - type: regex
+        regex:
+          - '<h1>AutobahnPython([ 0-9.]+)<\/h1>'
+
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        regex:
+          - 'AutobahnPython([ 0-9.]+)'
