--- a/technologies/aws-elastic-beanstalk-detect.yaml
+++ b/technologies/aws-elastic-beanstalk-detect.yaml
@@ -1,21 +1,30 @@
-id: aws-elastic-beanstalk-detect
+id: elastic-beanstalk-detect
 info:
-  name: AWS-Elastic-Beanstalk
+  name: AWS Elastic Beanstalk Detect
   author: pussycat0x
   severity: info
-  reference: app="AWS-Elastic-Beanstalk" -fofa query
-  tags: aws,tech
+  tags: aws,tech,beanstalk
+
 requests:
   - method: GET
     path:
       - '{{BaseURL}}'
+
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - '<title>PHP Application - AWS Elastic Beanstalk</title>'
-          - '<title>Welcome</title>'
-          - 'AWS X-Ray'
+          - '<li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/Welcome.html">AWS Elastic Beanstalk overview</a></li>'
+          - '<li><a href="http://docs.amazonwebservices.com/elasticbeanstalk/latest/dg/">AWS Elastic Beanstalk overview</a></li>'
+        condition: or
+
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - '<title>([A-Za-z -]+)<\/title>'
