--- a/misconfiguration/shell-history.yaml
+++ b/misconfiguration/shell-history.yaml
@@ -40,6 +40,8 @@ requests:
 
       - type: word
         words:
+          - "<?xml"
+          - "<env"
           - "application/javascript"
           - "application/json"
           - "application/xml"
