--- a/vulnerabilities/wordpress/wp-altair-listing.yaml
+++ b/vulnerabilities/wordpress/wp-altair-listing.yaml
@@ -5,7 +5,8 @@ info:
   severity: info
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
   reference: https://www.exploit-db.com/ghdb/6733
-  tags: wordpress,listing
+  tags: wordpress,listing,wp-theme
+
 requests:
   - method: GET
     path:
@@ -13,6 +14,7 @@ requests:
       - "{{BaseURL}}/wp-content/themes/altair/functions/"
       - "{{BaseURL}}/wp-content/themes/altair/images/flip/"
       - "{{BaseURL}}/wp-content/themes/altair/images/"
+
     matchers-condition: and
     matchers:
       - type: word
@@ -20,6 +22,7 @@ requests:
           - "Index of"
           - "wp-content/themes/altair"
         condition: and
+
       - type: status
         status:
           - 200
