--- a/misconfiguration/service-pwd-expose.yaml
+++ b/misconfiguration/service-pwd-expose.yaml
@@ -5,11 +5,13 @@ info:
   severity: info
   description: Searches for sensitive .cnf, .pwd files.
   reference: https://www.exploit-db.com/ghdb/7256
-  tags: expose,listing
+  tags: exposure,listing
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/_vti_pvt/"
+
     matchers-condition: and
     matchers:
       - type: word
@@ -19,6 +21,7 @@ requests:
           - "service.pwd"
           - "cnf"
         condition: and
+
       - type: status
         status:
           - 200
