Update and rename service-pwd-expose.yaml to service-pwd.yaml

--- a/misconfiguration/service-pwd.yaml
+++ b/misconfiguration/service-pwd.yaml
@@ -1,6 +1,6 @@
-id: service-pwd-expose
+id: service-pwd
 info:
-  name: Service password file 
+  name: Service password file
   author: pussycat0x
   severity: high
   description: Searches for sensitive service.pwd file.
