--- a/vulnerabilities/other/luftguitar-arbitrary-file-upload.yaml
+++ b/vulnerabilities/other/luftguitar-arbitrary-file-upload.yaml
@@ -18,6 +18,8 @@ requests:
         part: body
         words:
           - 'ftb.imagegallery.aspx'
+          - '<title>Image Gallery</title>'
+        condition: and
 
       - type: status
         status:
