--- a/technologies/gilacms-detect.yaml
+++ b/technologies/gilacms-detect.yaml
@@ -18,8 +18,8 @@ requests:
       - type: word
         part: body
         words:
-          - "Homepage | Gila CMS"
-          - "<meta name="generator" content="Gila CMS">"
+          - 'Homepage | Gila CMS'
+          - '<meta name="generator" content="Gila CMS">'
 
       - type: status
         status:
