--- a/vulnerabilities/wordpress/wp-altair-listing.yaml
+++ b/vulnerabilities/wordpress/wp-altair-listing.yaml
@@ -1,10 +1,9 @@
 id: altair-listing
 info:
-  name: WordPress Plugin Idx Broker Platinum Listing
+  name: Altair WordPress theme v4.8 Dir Listing
   author: pussycat0x
   severity: info
-  description: Searches for sensitive directories present in the wordpress-plugins plugin.
-  reference: https://www.exploit-db.com/ghdb/6733
+  description: Searches for directories listing in the altair theme.
   tags: wordpress,listing,wp-theme
 
 requests:
