--- a/vulnerabilities/wordpress/wp-altair-listing.yaml
+++ b/vulnerabilities/wordpress/wp-altair-listing.yaml
@@ -1,6 +1,6 @@
-id: altair-listing
+id: wp-altair-listing
 info:
-  name: Altair WordPress theme v4.8 Dir Listing
+  name: Altair WordPress theme v4.8 - Directory Listing
   author: pussycat0x
   severity: info
   description: Searches for directories listing in the altair theme.
