--- a/vulnerabilities/other/luftguitar-arbitrary-file-upload.yaml
+++ b/vulnerabilities/other/luftguitar-arbitrary-file-upload.yaml
@@ -5,6 +5,7 @@ info:
   author: pikpikcu
   severity: high
   tags: luftguitar
+  reference: https://www.exploit-db.com/exploits/14991
 
 requests:
   - method: GET
@@ -17,9 +18,9 @@ requests:
       - type: word
         part: body
         words:
-          - 'ftb.imagegallery.aspx'
+          - '<title>Insert Image</title>'
           - '<title>Image Gallery</title>'
-        condition: and
+        condition: or
 
       - type: status
         status:
