--- a/vulnerabilities/other/php-zerodium-backdoor-rce.yaml
+++ b/vulnerabilities/other/php-zerodium-backdoor-rce.yaml
@@ -4,7 +4,7 @@ info:
   name: PHP Zerodium Backdoor RCE
   author: dhiyaneshDk
   reference: https://news-web.php.net/php.internals/113838
-  severity: high
+  severity: critical
   tags: php,backdoor
 
 requests:
