--- a/takeovers/pagewiz-takeover.yaml
+++ b/takeovers/pagewiz-takeover.yaml
@@ -4,7 +4,7 @@ info:
   name: Pagewiz subdomain takeover
   author: brabbit10
   severity: high
-  reference: https://www.pagewiz.com/
+  reference: https://help.pagewiz.com/hc/en-us/articles/115005391465-Page-URL
   tags: takeover
 
 requests:
