Disabling workflow validation temporarily

--- a/.github/workflows/template-validate.yml
+++ b/.github/workflows/template-validate.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Template Validation
         run: |
           nuclei -validate -t .
-          nuclei -validate -w ./workflows
+      #    nuclei -validate -w ./workflows # Disabling temporarily
         shell: bash
