--- a/workflows/sap-netweaver-workflow.yaml
+++ b/workflows/sap-netweaver-workflow.yaml
@@ -6,7 +6,7 @@ info:
   description: A simple workflow that runs all SAP NetWaver related nuclei templates on a given target.
 
 workflows:
-  - template: technologies/sap-netweaver-detect.yaml # HTTP Templates
+  - template: technologies/sap/sap-netweaver-detect.yaml
     subtemplates:
       - template: cves/2020/CVE-2020-6287.yaml
       - template: cves/2017/CVE-2017-12637.yaml
