--- a/technologies/gilacms-detect.yaml
+++ b/technologies/gilacms-detect.yaml
@@ -20,6 +20,7 @@ requests:
         words:
           - 'Homepage | Gila CMS'
           - '<meta name="generator" content="Gila CMS">'
+        condition: or
 
       - type: status
         status:
