Add cgi as a valid Perl filetype

--- a/file/perl/perl-scanner.yaml
+++ b/file/perl/perl-scanner.yaml
@@ -12,6 +12,7 @@ file:
       - perl # uncommon
       - pod # plain old documentation
       - pm # perl module
+      - cgi # common gateway interface
 
     extractors:
       - type: regex
