--- a/takeovers/readme-takeover.yaml
+++ b/takeovers/readme-takeover.yaml
@@ -15,4 +15,4 @@ requests:
     matchers:
       - type: word
         words:
-          - Project doesnt exist... yet!
+          - Project doesn't exist... yet!
